cpp/test/Slice/errorDetection/VectorRedefinition.err
VectorRedefinition.ice:12 error: redefinition of vector `Vector'
